k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: portfolio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: portfolio
          image: 10.0.0.2/library/portfolio:build-114
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: portfolio-data
              mountPath: /app/instance
            - name: portfolio-uploads
              mountPath: /app/app/static/uploads
      volumes:
        - name: portfolio-data
          hostPath:
            path: /var/lib/docker/volumes/portfolio_data/_data
            type: Directory
        - name: portfolio-uploads
          hostPath:
            path: /var/lib/docker/volumes/portfolio_uploads/_data
            type: Directory
